--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,22 +1,10 @@
 <div>
   <div>
     <h1>
-      Board #<%= @the_board.id %> details
+      <%= @the_board.name %>
     </h1>
 
-    <div>
-      <div>
-        <a href="/boards">
-          Go back
-        </a>
-      </div>
-
-      <div>
-        <a href="/delete_board/<%= @the_board.id %>">
-          Delete board
-        </a>
-      </div>
-    </div>
+    <hr>
 
     <dl>
       <dt>
