--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -6,54 +6,69 @@
 
     <hr>
 
-    <dl>
-      <dt>
-        Name
-      </dt>
-      <dd>
-        <%= @the_board.name %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_board.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_board.updated_at) %> ago
-      </dd>
-    </dl>
-  </div>
-</div>
-
-<hr>
-
-
-<div>
-  <div>
     <h2>
-      Edit board
+      Add a new post
     </h2>
-
-    <form action="/modify_board/<%= @the_board.id %>"  method="post" >
-      <div>
-        <label for="name_box">
-          Name
-        </label>
-
-        <input type="text" id="name_box" name="query_name" value="<%= @the_board.name %>">
-      </div>
-
-      <button>
-        Update board
-      </button>
-    </form>
   </div>
 </div>
 
+<form action="/insert_post" method="post">
+
+  <div>
+    <label for="title_box">
+      Title
+    </label>
+
+    <input type="text" id="title_box" name="query_title">
+  </div>
+
+  <div>
+    <label for="body_box">
+      Body
+    </label>
+
+    <textarea id="body_box" name="query_body" rows="3"></textarea>
+  </div>
+
+  <div>
+    <label for="expires_on_box">
+      Expires on
+    </label>
+
+    <input type="date" id="expires_on_box" name="query_expires_on">
+  </div>
+
+  <input type="hidden" id="board_id_box" name="query_board_id" value="<%= @the_board.id %>">
+
+  <button>
+    Add post
+  </button>
+</form>
+
 <hr>
+
+<h2>Active posts</h2>
+
+<% matching_posts = Post.where({ :board_id => @the_board.id }) %>
+
+<table border="1">
+
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th>Posted on</th>
+    <th>Expires on</th>
+  </tr>
+
+<% matching_posts.each do |a_post| %>
+
+  <tr>
+    <th><%= a_post.title %></th>
+    <th><%= a_post.body %></th>
+    <th><%= a_post.created_at.strftime("%b %e, %Y") %></th>
+    <th><%= a_post.expires_on.strftime("%b %e, %Y") %></th>
+  </tr>
+
+<% end %>
+
+</table>
