BB - all except expired posts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,14 @@
 
   <body>
     <a href="/"> Bulletin Board </a>
+
     <hr>
+
+      <div><%= notice %></div>
+      <div><%= alert %></div>
+
+    <hr>
+
     <%= yield %>
   </body>
 </html>
